--- a/Greenify/MainWindow.xaml
+++ b/Greenify/MainWindow.xaml
@@ -31,8 +31,13 @@
             <Button x:Name="Details" Content="Detailed Statistics"  Margin="10,0,0,0" Click="Details_Click"  HorizontalAlignment="Right" Background="#FF73ED1F" />
             <Button x:Name="Home" Content="Home" Click="Home_Click" Margin="10,0,0,0"  HorizontalAlignment="Right" Background="#FF73ED1F"/>
         </StackPanel>
-        <Label x:Name="Sugestii" Content="Sugestions" Margin="0,0,160,0" Grid.Row="4" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="16" FontFamily="Yu Gothic UI Semibold" />
+        <Label x:Name="Statistici" Content="Stats" Grid.Row="4" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontFamily="Yu Gothic UI Semibold" />
+        <Label x:Name="Sugestii" Content="Sugestions" Margin="10,0,160,0" Grid.Row="4" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="16" FontFamily="Yu Gothic UI Semibold" />
         <TextBlock x:Name="Sugests" TextWrapping="Wrap" Margin="0,0,155,0" Grid.Row="5"  Grid.Column="4" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="5" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock x:Name="Stats" TextWrapping="Wrap" Margin="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <TextBlock x:Name="Sageata" Margin="0,0,0,0" HorizontalAlignment="Right" VerticalAlignment="Center" Foreground="#FF1FFF00" />
+        </StackPanel>
         <TextBlock x:Name="User" Grid.Row="2" Grid.Column="2" Margin="0,0,0,20"  Text="Hello George," FontSize="24" FontFamily="Corbel Light" />
         <Frame Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Grid.RowSpan="4" x:Name="Main" Margin="0,35,0,0" NavigationUIVisibility="Hidden" />
         
